--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js onebot",
+    "start": "node src/onebot/index.js",
     "bincheck": "node src/index.js",
     "onebot": "node src/onebot/index.js",
+    "tg": "node src/onebot/index.js",
     "test": "node src/index.js 520581"
   },
   "keywords": [],
@@ -18,6 +19,8 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "https-proxy-agent": "^7.0.6",
+    "socks-proxy-agent": "^8.0.5",
     "ws": "^8.18.3"
   },
   "optionalDependencies": {
