--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "https-proxy-agent": "^7.0.6",
+    "jimp": "^0.22.12",
     "socks-proxy-agent": "^8.0.5",
     "ws": "^8.18.3"
   },
